--- a/res/menu/fragment_files.xml
+++ b/res/menu/fragment_files.xml
@@ -3,7 +3,7 @@
     <item android:id="@+id/menu_search"
           android:title="Search"
           android:icon="@drawable/ic_menu_search2"
-          android:showAsAction="ifRoom|collapseActionView"
+          android:showAsAction="always|collapseActionView"
           android:actionViewClass="android.widget.SearchView" />
     <item android:id="@+id/menuItemRefresh" 
           android:title="Refresh" 
