--- a/res/layout/row_menu_transfert.xml
+++ b/res/layout/row_menu_transfert.xml
@@ -7,7 +7,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:orientation="horizontal" >
 
         <ImageView
@@ -102,6 +101,25 @@
                         android:textSize="12sp" />
                 </TableRow>
             </TableLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="20dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1" >
+            </View>
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:alpha="0.2"
+                android:src="@drawable/list_right_corner" />
         </LinearLayout>
     </LinearLayout>
 
