--- a/res/menu/fragment_home.xml
+++ b/res/menu/fragment_home.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/menuItemAddFiles"
+        android:id="@+id/menuItemAddFile"
         android:icon="@drawable/ic_menu_add"
         android:showAsAction="always"
         android:title="Add files"/>
