Added padding on the dropdown menu addFile

--- a/res/layout/row_addfile_dropdown.xml
+++ b/res/layout/row_addfile_dropdown.xml
@@ -8,7 +8,8 @@
 
     <ImageView
         android:id="@+id/addfileItemIcon2"
+        android:paddingTop="5dp"
         android:layout_width="30dp"
-        android:layout_height="30dp" />
+        android:layout_height="35dp" />
 
 </LinearLayout>
