--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -11,6 +11,6 @@
     <color name="add_files_text">#555555</color>
     <color name="blue_color">#04b0ee</color>
     <color name="actionbar_background_color">#222222</color>
-    <color name="splash_brand_color">#1b71c6</color>
+    <color name="splash_brand_color">#0399dd</color>
     <color name="splash_description_color">#0f53a7</color>
 </resources>
