--- a/res/menu/fragment_home.xml
+++ b/res/menu/fragment_home.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/menuItemAddFile"
-        android:icon="@drawable/ic_menu_add"
+        android:icon="@drawable/ic_ab_addfile"
         android:showAsAction="always"
         android:title="Add files"/>
 
