--- a/res/layout/fragment_about.xml
+++ b/res/layout/fragment_about.xml
@@ -6,6 +6,13 @@
     android:padding="10dp"
     android:background="@android:color/white" >
 
+    <Button
+        android:id="@+id/changelogButton"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="What's new (changelog)" />
+
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
