--- a/res/layout/fragment_about.xml
+++ b/res/layout/fragment_about.xml
@@ -17,6 +17,7 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="@string/about" />
 
 </LinearLayout>
